--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@babel/preset-react": "7.7.4",
     "babel-jest": "24.9.0",
     "babel-loader": "8.0.6",
-    "concurrently": "5.0.0",
+    "concurrently": "^6.0.2",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.15.1",
     "jest": "24.9.0",
@@ -45,7 +45,7 @@
     "supertest": "4.0.2",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.9.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "engines": {
     "node": "^12.0.0"
